--- a/introduction.html
+++ b/introduction.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">2.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="pipes.html"><strong aria-hidden="true">3.</strong> Pipes</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">4.</strong> Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">2.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="warp-pipes.html"><strong aria-hidden="true">3.</strong> WarpPipes</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">4.</strong> Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -146,8 +146,10 @@
                     <main>
                         <div style="margin: 30px auto; background-color: white; border-radius: 50%; width: 200px; height: 200px;"><img src="https://raw.githubusercontent.com/VodLM/warp-pipes/main/assets/header.png" alt="WarpPipes logo" style="width: 200px; padding: 60px 0px;"></div>
 <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>This book is an introduction to WarpPipes - a data processing module improving the workings with HuggingFace datasets.
-The goal of this guide is to introduce you to <code>WarpPipes</code> trough examples and comparing it against other solutions.</p>
+<p>Welcome to the WarpPipes library - a data processing module designed to improve the functionality of HuggingFace datasets. </p>
+<p>This book serves as an introduction to the library's features and how to use it effectively. Through examples and comparisons to other solutions, readers will gain a comprehensive overview of the library.</p>
+<p>At the core of the <code>warp_pipes</code> library is the <code>Pipe</code> class, which provides an atomic processing unit capable of ingesting, modifying, and returning batches of data. These pipes can be combined into <code>Pipelines</code>, which are containers that allow multiple processing steps to be combined into a single unit. Overall, the <code>warp_pipes</code> library offers a flexible and extensible way to define and apply custom processing steps to data.</p>
+<p>If you're a HuggingFace user, this Python package provides a framework for building more flexible and advanced processing steps for your dataset.</p>
 <h2 id="related-projects"><a class="header" href="#related-projects">Related projects</a></h2>
 <ul>
 <li>TODO: HuggingFace Community</li>
