deploy: b5e56ac88cb6779f8488d0cc48f1e62a8fb4958b

--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">2.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="warp-pipes.html"><strong aria-hidden="true">3.</strong> WarpPipes</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">4.</strong> Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="warp-pipes.html"><strong aria-hidden="true">2.</strong> Pipe and Pipelines</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Data Types</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Coming from HuggingFace</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> How can I?</div></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">6.</strong> Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
